@@ -45,6 +45,7 @@ class Swift_Transport_EsmtpTransport
     'port' => 25,
     'timeout' => 30,
     'blocking' => 1,
+    'tls' => false,
     'type' => Swift_Transport_IoBuffer::TYPE_SOCKET
     );
   
@@ -129,7 +130,14 @@ class Swift_Transport_EsmtpTransport
    */
   public function setEncryption($enc)
   {
-    $this->_params['protocol'] = $enc;
+    if ('tls' == $enc)
+    {
+      $this->_params['protocol'] = 'tcp';
+      $this->_params['tls'] = true;
+    } else {
+      $this->_params['protocol'] = $enc;
+      $this->_params['tls'] = false;
+    }
     return $this;
   }
   
@@ -139,7 +147,7 @@ class Swift_Transport_EsmtpTransport
    */
   public function getEncryption()
   {
-    return $this->_params['protocol'];
+    return $this->_params['tls'] ? 'tls' : $this->_params['protocol'];
   }
   
   /**
@@ -262,6 +270,34 @@ class Swift_Transport_EsmtpTransport
     catch (Swift_TransportException $e)
     {
       return parent::_doHeloCommand();
+    }
+
+    if ($this->_params['tls'])
+    {
+      try
+      {
+        $this->executeCommand("STARTTLS\r\n", array(220));
+        
+        if (!$this->_buffer->startTLS())
+        {
+          throw new Swift_TransportException('Unable to connect with TLS encryption');
+        }
+        
+        try
+        {
+          $response = $this->executeCommand(
+            sprintf("EHLO %s\r\n", $this->_domain), array(250)
+            );
+        }
+        catch (Swift_TransportException $e)
+        {
+          return parent::_doHeloCommand();
+        }
+      }
+      catch (Swift_TransportException $e)
+      {
+        $this->_throwException($e);
+      }
     }
 
     $this->_capabilities = $this->_getCapabilities($response);
